[gd_scene load_steps=9 format=2]

[ext_resource path="res://globals/game.gd" type="Script" id=1]
[ext_resource path="res://levels/default_level.tscn" type="PackedScene" id=2]
[ext_resource path="res://parts/character/character.tscn" type="PackedScene" id=3]
[ext_resource path="res://parts/camera/camera_controller.gd" type="Script" id=4]
[ext_resource path="res://parts/camera/camera_data.gd" type="Script" id=5]
[ext_resource path="res://scripts/Plot2D.gd" type="Script" id=6]

[sub_resource type="Resource" id=1]
script = ExtResource( 5 )
anchor_offset = Vector3( 0, 1.2, 0 )
target_offset = Vector3( 0, 0, 0 )
rotation = Vector3( 0, 0, 0 )
pitch_limit = Vector2( -45, 70 )
look_target = Vector3( 0, 0, 0 )

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0, 0 ), 0.0, 5.42416, 0, 1, Vector2( 0.147806, 0.801724 ), 5.42416, -1.78815, 1, 1, Vector2( 0.533487, 0.112069 ), -1.78815, 1.90334, 1, 1, Vector2( 1, 1 ), 1.90334, 0.0, 1, 0 ]

[node name="game" type="Node2D"]
script = ExtResource( 1 )
player = NodePath("ViewportContainer/character")

[node name="ViewportContainer" type="ViewportContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="default_level" parent="ViewportContainer" instance=ExtResource( 2 )]

[node name="character" parent="ViewportContainer" instance=ExtResource( 3 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 2.644, 0, -0.939 )
camera = NodePath("../Camera")

[node name="Camera" type="Camera" parent="ViewportContainer"]
transform = Transform( 0.999857, 0.00316881, -0.0165942, 0, 0.982251, 0.18757, 0.016894, -0.187543, 0.982111, 3.21423, 1.24633, 1.34832 )
script = ExtResource( 4 )
target = NodePath("../character")
camera_data = SubResource( 1 )
look_stick_response_curve = SubResource( 2 )
look_stick_response_regions = [ Vector2( 0, 0 ), Vector2( 0.5, 0.1 ), Vector2( 0.85, 0.65 ), Vector2( 1, 1 ) ]

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 972.0
margin_top = 5.0
margin_right = 1020.0
margin_bottom = 23.0
color = Color( 0, 0, 0, 0.0941176 )

[node name="fps_label" type="Label" parent="."]
margin_left = 975.0
margin_top = 7.0
margin_right = 1015.0
margin_bottom = 21.0
text = "fps"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = 5.0
margin_top = 70.0
margin_right = 554.0
margin_bottom = 160.0
color = Color( 0, 0, 0, 0.478431 )

[node name="c_blend" type="Label" parent="."]
margin_left = 11.0
margin_top = 74.0
margin_right = 60.0
margin_bottom = 88.0
text = "c_blend"

[node name="c_dir_length" type="Label" parent="."]
modulate = Color( 0.619608, 0.619608, 0.619608, 1 )
margin_left = 11.0
margin_top = 88.0
margin_right = 87.0
margin_bottom = 102.0
text = "c_dir_length"

[node name="c_dir_length_smoothed" type="Label" parent="."]
modulate = Color( 0.921569, 0.686275, 0.192157, 1 )
margin_left = 11.0
margin_top = 103.0
margin_right = 145.0
margin_bottom = 117.0
text = "dir_length_smoothed"

[node name="c_dir_length_plots" type="Node2D" parent="."]
position = Vector2( 150, 75 )
script = ExtResource( 6 )
height = 40
view_scale = Vector2( 2, 2 )

[node name="c_is_sprinting" type="Label" parent="."]
modulate = Color( 0.286275, 0.827451, 0.211765, 1 )
margin_left = 10.0
margin_top = 119.0
margin_right = 96.0
margin_bottom = 133.0
text = "c_is_sprinting"

[node name="ColorRect3" type="ColorRect" parent="."]
margin_left = 5.0
margin_top = 165.0
margin_right = 554.0
margin_bottom = 214.0
color = Color( 0, 0, 0, 0.478431 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="c_camera_track_plots" type="Node2D" parent="."]
position = Vector2( 150, 170 )
script = ExtResource( 6 )
title = "camera margin track"
title_color = Color( 0.968627, 0.439216, 0.972549, 0.470588 )
height = 20
view_scale = Vector2( 2, 2 )
